--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,11 @@
                     $bwdBut:$('#slider4 .left'),    // Selector to left button.
                     $fwdBut:$('#slider4 .right')    // Selector to right button.
                 });
+
+                $('#slider5').Thumbelina({
+                    $bwdBut:$('#slider5 .left'),    // Selector to left button.
+                    $fwdBut:$('#slider5 .right')    // Selector to right button.
+                });
             })
         </script>
     <style>
@@ -58,6 +63,15 @@
         }
 
         #slider4{
+            position:relative;
+            margin-left:20px;
+            width:100%;
+            height:300px;
+            border-top:1px solid #aaa;
+            border-bottom:1px solid #aaa;
+        }
+
+        #slider5{
             position:relative;
             margin-left:20px;
             width:100%;
