update sliders and book.html

--- a/templates/book.html
+++ b/templates/book.html
@@ -44,9 +44,7 @@
                         </div>
                         {% if not it_is_librarian %}
                             <div class="biblio_book_buy clicktag" id="unr_buynow" data-clicktag-id="buynow_book">
-
-
-                                    {% if book_in_cart and in_issuance %}
+                                    {% if book_in_cart or in_issuance %}
                                         <form action="/cart" method="post">
                                             <button class="coolbtn btn-green a_buyany">
                                                 <span class="uppercase">
