--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
                     <li>
                         <form action="/forward/" class="search_btn" method="POST">
                           <input type="text" name="search" placeholder="Искать книгу...">
-                          <button type="submit" value="Найти книгу"></button>
+                          <button type="submit"></button>
                         </form>
                     </li>
                     {% if current_user.is_authenticated %}
