--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
-    <link rel="shortcut icon" type="image/x-icon" href="http://booker.psdemo.ru/data/img" >
+    <link rel="shortcut icon" type="image/x-icon" href="http://booker.psdemo.ru/data/img/icon.ico" >
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
     <script type="text/javascript">
