update login, register

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -271,8 +271,8 @@ footer {
 }
 
 .section_input {
-    background-image: url(http://booker.psdemo.ru/data/banners/img_header.jpg);
     padding: 150px 40px 130px 40px;
+    width: 100%;
 }
 
 .container_menu {
@@ -472,46 +472,6 @@ footer {
     margin-right: 100px;
     margin-left: 100px;
 }
-
-@media (min-width:576px){
-.container{
-    max-width:540px
-}}
-
-@media (min-width:768px){
-.container {
-    max-width:720px
-}}
-
-@media (min-width:992px){
-.container{
-    max-width:960px
-}}
-
-@media (min-width:1200px){
-.container {
-    max-width:1140px
-}}
-
-@media (min-width:576px){
-.container {
-    max-width:540px
-}}
-
-@media (min-width:768px){
-.container {
-    max-width:720px
-}}
-
-@media (min-width:992px){
-.container {
-    max-width:960px
-}}
-
-@media (min-width:1200px){
-.container{
-    max-width:1140px
-}}
 
 
 .form-control{
