--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="content">
     <div class="section_input">
         <main role="main" class="container">
             <h1>Регистрация</h1>
@@ -32,4 +33,5 @@
             </form>
         </main>
     </div>
+</div>
 {% endblock %}
