--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="content">
-    <div class="section_input content">
+    <div class="section_input">
         <div role="main" class="container">
             <h1>Авторизация</h1>
             <form action="" method="post" novalidate>
